exports[`ellipsis should default max-width to 100% 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should pass parameter to the value of max-width 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "300px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should properly add rules when block has existing rules 1`] = `
Object {
  "background": "red",
  "display": "inline-block",
  "maxWidth": "300px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should throw a warning when called with more than 1 parameter 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/ellipsis.js --%c

ellipsis %cexpects a maximum of 1 parameter. However, you passed 2 parameters. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#ellipsis%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`ellipsis should throw an error and a warning when called with multiple non-string values 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/ellipsis.js --%c

ellipsis %cexpects a parameter of type string. However, you passed 1(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#ellipsis%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`ellipsis should throw an error and a warning when called with multiple non-string values 2`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/ellipsis.js --%c

ellipsis %cexpects a maximum of 1 parameter. However, you passed 2 parameters. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#ellipsis%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`ellipsis should throw an error when called with a non-string value 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/ellipsis.js --%c

ellipsis %cexpects a parameter of type string. However, you passed 1(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#ellipsis%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
